# dora

./: .dockerignore  .env  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  Dockerfile  README.md  config_schema.json  example.yaml  rust-toolchain.toml
.cargo/: audit.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: actions.yml  release.yml  sqlx-prepare.yml
.sqlx/: query-04e6e302bbdb584e27a02b1130ff76c7af0e271931c870553d910bf51e0ed40f.json  query-0563951c136d64878901cff4564e07bec8dfa3cc0a90d73202331c8b70e59e29.json  query-06e79236f348fc77193dd0247e14130956f8bc2f299a8b18a603222f1a52bd3f.json  query-0b566abc5d20f7e98e02a2f7c13cd8f0d8fc22916d1afe3e45dbac2b011f08dc.json  query-0d1743c45111c66754d0421bd7cfbf478d300a80bf1094c3742f8ecf8f5c78df.json  query-11852fe6f3eeff440f5cd6d88d289a880543eb3cf76944838c9d1c6c9cfa3be4.json  query-16d0a1030dd3030c6c0fa561ca1ee135a2a64960ccdb1915a88b15a60dd6298a.json  query-184199130fd31f12bc36425b9b7640e828ea30258ce8333dd2109e07657f4113.json  query-1bc3e3c924635a9f5122ce34d34ec681e1b98fdd66224d20f683841b9bfeaa01.json  query-25c2c9c884e7f8054c76daae7baa99ea0a80c25914987782f27badfe43cdee8c.json  query-2b9e730d4666fb0e18cbd3aa355e5471461aad66e34099279adde17e03f7b0f2.json  query-31b7e68fb8dae1d4dd629d52fa5148cbcfa4790ce0161fc09dd1baab78ab13bf.json  query-33e36e2fea5c927b652367a08b48475bf2be80b27b015bfa74d82a4446b2f3fa.json  query-4dd99639645a515ac322c6dbb15ab744239ff5db54879890cee182aa72276554.json  query-4eee025f59f6360269783ffc2fdab1657018d779d428f1cb3c9d7879d4a97482.json  query-516bbfb5075d850f6df5481d4af205c6603cc50e7f81c1a1a0cd9166ab9e7ebb.json  query-55159c0909cd8cd338b8b3d78a7580b25f961d4c97030f86c2dd03f2ae1e42e1.json  query-56054e920dd6390bfb7a2bb59c84b7f683ab64952a598c1f8e2841d84f0506b4.json  query-62a4111e2caa92798f2085a3a0f22b60a024d39c4787720612b28b210538a3a1.json  query-6ccf197503ba50b8938a172cd5efd2bd650390e5f4f02f71371879f22d7dce49.json  query-7bcb259e46748934c81fdcc2d2b1706e87d7de7e031c04ce9bce89a68ea5912a.json  query-81dbb61ca96280aa5a342b9b0384f3e329a1febcede12df624312daf7b0d5c91.json  query-834de3b18119802e7b594d8ef795ef1f9f43caec959b52034643f8ec164ba720.json  query-8742f3bf80e8552784111b97edbd048cf505515e17384e9b9ed994086cfca6e8.json  query-8892c0aa56c0a6aaad5f88ad1db61bb623beea82e8cd76bedc28aa80096b27a9.json  query-93cce35e72e99e8fe7950a2e14ab7dff8ba5c9d2dead96505deace27ea34a8d1.json  query-94eed5af2d041e74c7cebb730732953b8617e61236e8ff5b18879cf872a8a314.json  query-97c3eb530c5f8115c7bfd9914c47b8c500609164117810c100cbd1db5cbd2df8.json  query-97ffb7bf204a2108a10456981ae586c058e050e32e452f568088ac332fb58173.json  query-a3e390c49fc3c6f3eb8972ce37838ec40bb429111b51bc1dba4482a852948b95.json  query-a63d2d24e2d5d2d1ab5ee63e3040c3b0432a1b67d62138095bcdef774a9950a9.json  query-a67e07276bd32675ad215605b0c14a193ceb87740edd0dad87f8ad9768021bf6.json  query-a90b3fdbaa080839b3d61b367353eb5de5dc6deb6538a399a355777f9381f9e7.json  query-acfe51abbb57bd9ad783011c9828f15680686eedbfe204ff673fcb855b76fa92.json  query-b3dea29cd870cc21ec227fb22da9b700f541d0e88ed00209b7020b8a7751b6f7.json  query-b956acaf5fae340ca8d4f050a8d5825fd77dd03d68ccfec6f5c97bc49178bfce.json  query-bc024c779a8cc30815afdecea1b218f5b62bddeb758a341a39ab2a98374022a7.json  query-c602950e1221773aebfd0740e40d27569ae5e5658b35129541cf257a6419f70c.json  query-d00b308680fe1c61484860e181ec6d3ba9fc90394fd963d1a60cc98cb084cc30.json  query-d60b8b755be761db36613b8804afd395e708c01885940049eed78682fe7553c7.json  (+7 more)
crates/bins/api-server/: Cargo.toml
crates/bins/api-server/src/: main.rs
crates/bins/migrate/: Cargo.toml
crates/bins/migrate/src/: main.rs
crates/bins/v4-server/: Cargo.toml
crates/bins/v4-server/src/: main.rs
crates/bins/v6-server/: Cargo.toml
crates/bins/v6-server/src/: main.rs
crates/dora-cfg/: Cargo.toml  README.md
crates/dora-runtime/: Cargo.toml
crates/dora-runtime/src/: lib.rs
crates/external-api/: Cargo.toml
crates/external-api/assets/swagger-ui/: README.md  index.html
crates/external-api/src/: lib.rs  tls.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: v6_relay.rs
crates/integration-tests/tests/common/: builder.rs  env.rs
crates/integration-tests/tests/test_configs/: basic.yaml  cache_threshold.yaml  classes.yaml  threshold.yaml  vendor.yaml
crates/libs/config/: Cargo.toml
crates/libs/config/sample/: circular_deps.yaml  config.yaml  config_v4.json  config_v4_policies.yaml  config_v4_simple.json  config_v6_client_classes.yaml  config_v6_policies.yaml  config_v6_pools.yaml  long_opts.yaml
crates/libs/config/src/: client_classes.rs  lib.rs  reservations.rs  v4.rs  v6.rs
crates/libs/config/src/wire/: client_classes.rs  mod.rs  v4.rs  v6.rs
crates/libs/ddns/: Cargo.toml
crates/libs/ddns/examples/: tsig.rs
crates/libs/ddns/src/: dhcid.rs  lib.rs  update.rs
crates/libs/ip-manager/: Cargo.toml  sqlx-data.json
crates/libs/ip-manager/src/: lib.rs  pool.rs  postgres.rs  sqlite.rs
crates/libs/register_derive_impl/: Cargo.toml
crates/libs/register_derive_impl/src/: lib.rs
crates/plugins/forensic-log/: Cargo.toml
crates/plugins/forensic-log/src/: lib.rs
crates/plugins/leases-v6/: Cargo.toml
crates/plugins/leases-v6/src/: lib.rs
deploy/: README.md
deploy/base/: api.yaml  (+11 more)
docs/: api_implementation_gap_checklist.md  architecture.md  docker.md  gns3.md  kubernetes_deploy.md  management-api.md  openapi.yaml  pi_setup.md  rfc8415_plan.md  rfc_compliance.md
dora-cfg/: Cargo.toml
dora-core/: Cargo.toml
external-api/: Cargo.toml
infra-build/: Containerfile  entrypoint.sh
libs/client-classification/: Cargo.toml
migrations/: 20210824204854_initial.sql  20260706120000_leases_v6.sql  20260708120000_operations.sql  20260708130000_runtime_reservations.sql  20260708140000_config_candidates.sql  20260711120000_server_state.sql  20260712120000_reservation_options.sql
plugins/static-addr/: Cargo.toml
scripts/: setup-audit-wsl.sh
web-ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+79 files in other folders)
