[workspace]
members = [
    # per-service binaries (dora-v4, dora-v6, dora-api, dora-migrate)
    "crates/bins/*",
    # shared service bootstrap
    "crates/dora-runtime",
    # main server code
    "crates/dora-core",
    "crates/dora-cfg",
    # healthcheck/diagnostics,etc
    "crates/external-api",
    # libs
    "crates/libs/*",
    # plugins
    "crates/plugins/*",
    # out-of-process integration tests (spawn the split binaries)
    "crates/integration-tests",
]
resolver = "2"
# default-members = ["bin"]

[workspace.dependencies]
# hickory 0.26 to match usg-dhcproto (its Name type must be the same hickory
# version dora's ddns code uses).
hickory-proto = { version = "0.26.1", default-features = false, features = [
    "dnssec-ring",
    "serde",
    "std",
] }
socket2 = { version = "0.6.4", features = [
    "all",
] } # TODO: update when tokio sockets impl AsFd, then update unix-udp-sock
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
bytes = "1.12"
clap = { version = "4.6.1", features = ["derive", "env"] }
base64 = "0.22.1"
# usg-dhcproto is the 192d-Wing fork of dhcproto; package-renamed so code keeps
# using `dhcproto::`.
dhcproto = { package = "usg-dhcproto", version = "0.18.0" }
futures = { version = "0.3", default-features = false, features = ["std"] }
ipnet = { features = ["serde"], version = "2.12.0" }
pnet = { features = ["serde", "std"], version = "0.35.0" }
prometheus = "0.14.0"
prometheus-static-metric = "0.5"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec", "net"] }
tracing = "0.1.44"
tracing-futures = "0.2.5"
tracing-subscriber = { features = ["env-filter", "json"], version = "0.3" }
tracing-test = "0.2.6"
thiserror = "2.0"
rand = "0.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# yaml_serde is the actively-maintained continuation of the (deprecated) serde_yaml
# crate, published by The YAML Organization. API-compatible with serde_yaml 0.9+.
yaml_serde = "0.10"
rustls-pki-types = "1.15.0"
