[package]
name = "external-api"
version = "0.1.0"
authors = ["BlueCat Networks <support@bluecatnetworks.com>"]
edition = "2024"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-core = { path = "../dora-core" }
ip-manager = { path = "../libs/ip-manager" }
config = { path = "../libs/config" }

# libs
anyhow = { workspace = true }
axum = "0.8.9"
chrono = "0.4.45"
hex = "0.4.3"
tokio = { workspace = true }
tower-http = { version = "0.7.0", features = ["trace", "timeout"] }
tokio-util = { workspace = true }
tracing-futures = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
yaml_serde = { workspace = true }
prometheus = { workspace = true }
ipnet = { workspace = true }
subtle = "2.6"


[dev-dependencies]
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "rustls-tls",
] }
