[package]
name = "external-api"
version = "0.1.0"
authors = ["BlueCat Networks <support@bluecatnetworks.com>"]
edition = "2024"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-core = { path = "../dora-core" }
ip-manager = { path = "../libs/ip-manager" }
config = { path = "../libs/config" }
ddns = { path = "../libs/ddns" }

# libs
anyhow = { workspace = true }
axum = "0.7.9"
chrono = "0.4.45"
hex = "0.4.3"
tokio = { workspace = true }
tower-http = { version = "0.7.0", features = ["trace", "timeout"] }
tokio-util = { workspace = true }
tracing-futures = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
yaml_serde = { workspace = true }
prometheus = { workspace = true }
ipnet = { workspace = true }
subtle = "2.6"
# in-process TLS + mTLS termination for the management API. tokio-rustls 0.26
# re-exports rustls 0.23 (the same modern stack sqlx/reqwest already pull in);
# use its `ring` provider to avoid a new aws-lc-rs C toolchain dependency.
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
    "tls12",
    "logging",
] }
rustls-pemfile = "2"
# hand-rolled TLS accept loop: axum 0.7's `serve` is hardcoded to a plain
# TcpListener, so we drive the Router over each TLS connection with hyper
# ourselves (the axum `low-level-rustls` pattern).
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rcgen = "0.13"
