[package]
name = "client-classification"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.8.7"
pest_derive = "2.8.7"
thiserror = "2.0.18"
hex = "0.4.3"
dhcproto = { workspace = true }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "my_benchmark"
harness = false
