[package]
name = "static-addr"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-core = { path = "../../dora-core" }
config = { path = "../../libs/config" }

register_derive = { path = "../../libs/register_derive" }
message-type = { path = "../message-type" }
# needed directly because `#[instrument]` expands to absolute `::tracing::` paths
tracing = { workspace = true }

[dev-dependencies]
yaml_serde = { workspace = true }
tracing-test = { workspace = true }
hex = "0.4"
