[package]
name = "api-server"
version.workspace = true
edition = "2024"
license = "MPL-2.0"

[[bin]]
name = "dora-api"
path = "src/main.rs"

[dependencies]
dora-runtime = { path = "../../dora-runtime" }
dora-core = { path = "../../dora-core" }
external-api = { path = "../../external-api" }
config = { path = "../../libs/config" }
ip-manager = { path = "../../libs/ip-manager" }
# external
anyhow = { workspace = true }
dotenv = { package = "dotenvy", version = "0.15.7" }

[target.'cfg(not(target_env = "musl"))'.dependencies]
jemallocator = { version = "0.5.4", features = ["background_threads"] }
