[package]
name = "migrate"
version.workspace = true
edition = "2024"
license = "MPL-2.0"

[[bin]]
name = "dora-migrate"
path = "src/main.rs"

[dependencies]
dora-core = { path = "../../dora-core" }
ip-manager = { path = "../../libs/ip-manager" }
anyhow = { workspace = true }
dotenv = { package = "dotenvy", version = "0.15.7" }
