[package]
name = "v6-server"
version = "0.2.0"
edition = "2024"
license = "MPL-2.0"

[[bin]]
name = "dora-v6"
path = "src/main.rs"

[dependencies]
dora-runtime = { path = "../../dora-runtime" }
dora-core = { path = "../../dora-core" }
config = { path = "../../libs/config" }
ip-manager = { path = "../../libs/ip-manager" }
# plugins the v6 datapath needs
message-type = { path = "../../plugins/message-type" }
leases-v6 = { path = "../../plugins/leases-v6" }
# external
anyhow = { workspace = true }
dotenv = { package = "dotenvy", version = "0.15.7" }

[target.'cfg(not(target_env = "musl"))'.dependencies]
jemallocator = { version = "0.5.4", features = ["background_threads"] }
