[package]
name = "config"
version.workspace = true
edition = "2024"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
ipnet = { workspace = true }
tracing = { workspace = true }
yaml_serde = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
hex = "0.4"
parking_lot = "0.12"
phf = { version = "0.14", features = ["macros"] }
rand = "0.10"
rustls-pki-types = { workspace = true }

dora-core = { path = "../../dora-core" }
client-classification = { path = "../client-classification" }
topo_sort = { path = "../topo_sort" }
