[package]
name = "ip-manager"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../../libs/config" }
icmp-ping = { path = "../icmp-ping" }
client-protection = { path = "../client-protection" }

async-trait = { workspace = true }
ipnet = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = [
    "log",
] } # TODO: do we need the log feature?
chrono = "0.4.45"
moka = { version = "0.12.15", features = ["future"] }
# TODO: hopefully the rustls feature can go away, the lib requires it
# sqlx 0.7 split the combined runtime+tls feature and made offline mode part of
# the default `macros` feature. `tls-rustls-ring` keeps the ring backend (now
# on the patched 0.17 line) instead of pulling in aws-lc-rs.
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls-ring",
    "chrono",
    "macros",
    "migrate",
] }

[dev-dependencies]
tokio-test = "0.4.5"
tracing = { workspace = true, features = ["log"] }
tokio = { workspace = true }
tracing-test = { workspace = true }
rand = { workspace = true }
