[package]
name = "register_derive_impl"
version.workspace = true
authors = ["Bluecat Networks <support@bluecatnetworks.com>"]
edition = "2024"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "3.0"
proc-macro2 = "1"

# dora
dora-core = { path = "../../dora-core" }

[lib]
proc-macro = true
