[package]
name = "leases-v6"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
dora-core = { path = "../../dora-core" }
config = { path = "../../libs/config" }
message-type = { path = "../message-type" }

register_derive = { path = "../../libs/register_derive" }
ip-manager = { path = "../../libs/ip-manager" }

# needed directly because `#[instrument]` expands to absolute `::tracing::` paths
tracing = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
tokio = { workspace = true }
